# OAR

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  计划.md
crates/oar-core/: Cargo.toml
crates/oar-core/migrations/: 0001_phase_0_6_identity_action_audit.sql  0002_review_inbox_domain.sql  0003_agent_model_settings.sql  0004_expand_evidence_source_kinds.sql
crates/oar-core/src/: lib.rs  observability.rs  security.rs
crates/oar-core/src/action/: audit_event.rs  audit_repository.rs  audit_trace.rs  capability.rs  confirmed_action.rs  execution_policy.rs  execution_request.rs  executor.rs  mod.rs  operation_ledger.rs  operation_ledger_repository.rs  postgres_execution_worker.rs  postgres_executor.rs  safety.rs  token_refresh_audit.rs
crates/oar-core/src/action/capability/: feishu.rs  matrix.rs  tests.rs
crates/oar-core/src/action/executor/: adapter.rs  events.rs  mod.rs  policy.rs  result.rs  tests.rs  (+1 more)
crates/oar-core/src/domain/: device_sync.rs  evidence.rs  identity.rs  mod.rs  proposed_action.rs  review_inbox.rs  scheduler.rs  token_grant.rs  token_refresh.rs
crates/oar-core/src/lark/: adapter.rs  auth.rs  fixtures.rs  mod.rs  parser.rs
crates/oar-core/tests/: action_executor.rs  audit_event.rs  audit_repository.rs  audit_trace.rs  device_sync.rs  evidence.rs  execution_policy.rs  feishu_auth_adapter.rs  identity_models.rs  lark_adapter.rs  lark_auth_adapter.rs  lark_parser.rs  operation_ledger.rs  operation_ledger_repository.rs  postgres_feature_contract.rs  postgres_live_repository.rs  postgres_repository_sql.rs  postgres_schema_contract.rs  proposed_action.rs  review_inbox.rs  scheduler.rs  token_grant_state.rs  token_refresh_audit_integration.rs  token_refresh_service.rs
crates/oar-core/tests/action_executor/: common.rs  execution_paths.rs  policy_paths.rs
crates/oar-core/tests/postgres_feature_contract/: postgres_feature_api_contract.rs  tenant_maintenance_config.rs
crates/oar-core/tests/postgres_live_repository/: action_execution.rs  audit.rs  device_session.rs  execution_recorder.rs  execution_uow.rs  harness.rs  identity.rs  operation_ledger.rs  operational_recovery.rs  review_inbox.rs  scheduler.rs  tenant_maintenance.rs  token_refresh.rs  token_refresh_scheduler.rs
crates/oar-core/tests/postgres_repository_sql/: audit_sql.rs  device_session_sql.rs  identity_sql.rs  ledger_sql.rs  operational_recovery_sql.rs  review_inbox_sql.rs  scheduler_sql.rs  token_grant_sql.rs
crates/oar-core/tests/postgres_schema_contract/: action_ledger.rs  audit.rs  identity_tokens_devices.rs  review_inbox.rs  scheduler.rs
crates/oar-core/tests/token_refresh_service/: bridge.rs  common.rs  decision.rs  sanitization.rs  service_behavior.rs
crates/oar-http-facade/: Cargo.toml
crates/oar-http-facade/src/: agent_routes.rs  config.rs  health.rs  lib.rs  main.rs  persistence.rs  response.rs  review_inbox_routes.rs  routing.rs  runtime.rs  server.rs  session_auth.rs  tenant_maintenance.rs  tenant_maintenance_daemon.rs  tenant_maintenance_daemon_failure.rs  tenant_maintenance_daemon_stage_status.rs  tenant_maintenance_daemon_status.rs  tests.rs  util.rs
crates/oar-http-facade/src/agent/: activation.rs  anthropic.rs  context_text.rs  live_context.rs  mod.rs  openai.rs  prompt.rs  provider_config.rs  request.rs  runtime.rs  settings.rs  status.rs  stream.rs  tools.rs
crates/oar-http-facade/src/agent_routes/: body.rs  settings.rs  stream.rs
crates/oar-http-facade/src/feishu_auth/: events.rs  grants.rs  handlers.rs  mod.rs  persistence.rs  routes.rs  session.rs  util.rs
crates/oar-http-facade/src/persistence/: config.rs
crates/oar-http-facade/src/review_inbox_routes/: decision.rs  dto.rs  labels.rs  projection.rs  tests.rs
crates/oar-http-facade/src/tenant_maintenance/: audit_sink.rs  env.rs  worker.rs
crates/oar-http-facade/src/tenant_maintenance_daemon/: handle.rs  worker.rs
crates/oar-http-facade/src/tenant_maintenance_daemon_stage_status/: aggregate.rs  outbox_drain.rs  scheduled_sweep.rs
crates/oar-http-facade/src/tenant_maintenance_daemon_status/: model.rs
crates/oar-http-facade/src/tests/: config.rs  feishu_auth.rs  health.rs  mod.rs  postgres_support.rs  review_inbox_routes.rs  routing_guards.rs  runtime.rs  session_auth.rs  support.rs
crates/oar-lark-adapter/: Cargo.toml
crates/oar-lark-adapter/src/: audit_outbox.rs  config.rs  credentials.rs  error.rs  factory.rs  http_headers.rs  lib.rs  postgres.rs  redaction.rs  url_encoding.rs
crates/oar-lark-adapter/src/audit_outbox/: dispatcher.rs  envelope.rs  noop.rs  sink.rs  tests.rs  webhook.rs
crates/oar-lark-adapter/src/calendar/: client.rs  error.rs  feishu_types.rs  mod.rs  response_parser.rs  source_ref.rs  tests.rs  types.rs
crates/oar-lark-adapter/src/crypto/: clock.rs  encryptor.rs  envelope.rs  mod.rs  tests.rs
crates/oar-lark-adapter/src/docs/: client.rs  error.rs  feishu_types.rs  mod.rs  response_parser.rs  source_ref.rs  types.rs
crates/oar-lark-adapter/src/factory/: env.rs  key_resolver.rs  postgres.rs  tests.rs
crates/oar-lark-adapter/src/material/: blob.rs  mod.rs  types.rs
crates/oar-lark-adapter/src/minutes/: client.rs  error.rs  feishu_types.rs  mod.rs  response_parser.rs  source_ref.rs  tests.rs  types.rs
crates/oar-lark-adapter/src/oauth/: envelope.rs  http.rs  login.rs  mod.rs  transport.rs  types.rs
crates/oar-lark-adapter/src/okr/: client.rs  error.rs  feishu_types.rs  mod.rs  parser.rs  read_model.rs  request_builder.rs  response_parser.rs  review_inbox.rs  source_ref.rs  tests.rs  types.rs  validation.rs
crates/oar-lark-adapter/src/task/: client.rs  error.rs  feishu_types.rs  mod.rs  source_ref.rs  tests.rs  types.rs
crates/oar-lark-adapter/src/test_support/: http.rs
crates/oar-lark-adapter/tests/postgres_refresh_integration/: live_smoke.rs  material_failures.rs  matrix_failures.rs  mod.rs  success_case.rs
crates/oar-runtime/: Cargo.toml  README.md
crates/oar-runtime/src/: lib.rs  runtime.rs
crates/oar-runtime/src/runtime/: builder.rs  discovering.rs  postgres.rs  registry.rs  single.rs  tenant_ids.rs  tests.rs  types.rs
(+513 files in other folders)
