[workspace]
members = ["crates/oar-core", "crates/oar-lark-adapter", "crates/oar-runtime"]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt"] }
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
