[workspace]
members = [
    "crates/oar-core",
    "crates/oar-http-facade",
    "crates/oar-lark-adapter",
    "crates/oar-runtime",
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1"
bytes = "1.11.1"
http-body-util = "0.1.3"
hyper = { version = "1.9.0", default-features = false }
hyper-util = { version = "0.1.20", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls", "stream"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
