[package]
name = "oar-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
postgres = ["dep:sqlx", "dep:thiserror", "dep:tokio"]
postgres-sqlx = ["postgres"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots", "json"], optional = true }
thiserror = { version = "2.0.18", optional = true }
tokio = { version = "1.52.3", default-features = false, features = ["rt"], optional = true }
