[package]
name = "oar-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
postgres = ["dep:sqlx", "dep:thiserror", "dep:tokio"]
postgres-sqlx = ["postgres"]

[dependencies]
async-trait.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["json"], optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tracing.workspace = true
tracing-subscriber.workspace = true
