[package]
name = "oar-http-facade"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
oar-lark-adapter = { path = "../oar-lark-adapter" }
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
