[package]
name = "oar-http-facade"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
dotenvy = "0.15"
hex = "0.4"
oar-core = { path = "../oar-core", features = ["postgres"] }
oar-lark-adapter = { path = "../oar-lark-adapter" }
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tracing.workspace = true
tracing-subscriber.workspace = true
