[package]
name = "oar-http-facade"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = "0.10"
bytes.workspace = true
http-body-util.workspace = true
hyper = { workspace = true, features = ["http1", "server"] }
hyper-util = { workspace = true, features = ["tokio"] }
dotenvy = "0.15"
hex = "0.4"
oar-core = { path = "../oar-core", features = ["postgres"] }
oar-lark-adapter = { path = "../oar-lark-adapter", features = ["postgres"] }
oar-runtime = { path = "../oar-runtime" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
async-trait.workspace = true
