[package]
name = "oar-lark-adapter"
version = "0.1.0"
edition = "2021"

[features]
default = []
postgres = ["dep:sqlx", "oar-core/postgres"]

[dependencies]
oar-core = { path = "../oar-core" }
aes-gcm = "0.10"
async-trait = "0.1"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots"], optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["rt"] }

[dev-dependencies]
oar-core = { path = "../oar-core", features = ["postgres"] }
serde_json = "1"
sqlx = { version = "0.9.0", default-features = false, features = ["postgres", "runtime-tokio", "tls-rustls-ring-native-roots"] }
tokio = { version = "1.52.3", default-features = false, features = ["rt"] }
