[package]
name = "oar-lark-adapter"
version = "0.1.0"
edition = "2021"

[features]
default = []
postgres = ["dep:sqlx", "oar-core/postgres"]

[dependencies]
oar-core = { path = "../oar-core" }
aes-gcm = "0.10"
async-trait.workspace = true
hex = "0.4"
reqwest.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
oar-core = { path = "../oar-core", features = ["postgres"] }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
