[package]
name = "oar-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
oar-core = { path = "../oar-core", features = ["postgres"] }
tokio = { workspace = true, features = ["sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
